@@ -12,6 +12,8 @@
 
     * las/arch/x86_64/main.c: Added the CWD/CDQ/CQO instruction
 
+    * las/arch/x86_64/main.c: Added the DAA instruction
+
 
 2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>
 
